updated status; been busy since git init but taking a break now;